--- a/image_gallery_fun_animals/index.html
+++ b/image_gallery_fun_animals/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Fun with animals</title>
 
-<!-- include our libraries and css files -->
+  <!-- include our libraries and css files -->
 
-<script src="js/jquery-2.1.4.min.js"></script>
-<script src="js/handlebars-v3.0.3.js"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/handlebars-v3.0.3.js"></script>
 
-<script src="js/bootstrap.min.js"></script>
-<script src="AnimalsData.js"></script>
-<script src="scripts.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="AnimalsData.js"></script>
+  <script src="scripts.js"></script>
 
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-<!-- Navbar -->
+  <!-- Navbar -->
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="#" id="albums-tab">Albums</a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+  <!-- /Navbar -->
+
+  <!-- Breadcrumbs -->
+
+  <div class="container">
+    <ol class="breadcrumb">
+      <li>
+        <a href="#">
+          Albums
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Animals
+        </a>
+      </li>
+      <li class="active">
+        Animal's name
+      </li>
+    </ol>
+    <div id="content"  class="container-fluid"  role="main">
     </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="main-navbar">
-      <ul class="nav navbar-nav">
-        <li class="active">
-          <a href="#" id="albums-tab">Albums</a>
-        </li>
-        <li>
-          <a href="#">About</a>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<!-- /Navbar -->
-
-<!-- Breadcrumbs -->
-
-<div class="container">
-  <ol class="breadcrumb">
-    <li>
-      <a href="#">
-        Albums
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        Animals
-      </a>
-    </li>
-    <li class="active">
-      Animal's name
-    </li>
-  </ol>
-  <div id="content"  class="container-fluid"  role="main">
   </div>
-</div>
 
-<!-- /Breadcrumbs -->
+  <!-- /Breadcrumbs -->
+
+  <!-- Albums template -->
 
   <script id="albums-template" type="text/x-handlebars-template">
     <div class="row">
@@ -90,6 +92,46 @@
       {{/each}}
     </div> <!-- / row -->
   </script>
+
+  <!-- /Albums template -->
+
+  <!-- Animal list -->
+
+  <script id="animal-list-template" type="text/x-handlebars-template">
+    <h4>{{name}}</h4>
+    <div class="row">
+      {{#each animals}}
+      <div class="col-xs-12 col-md-4">
+        <div class="album-single-photo" data-id="{{@index}}">
+          <img class="image-responsive" src="{{image1}}"  alt=""/>
+          <img class="image-responsive" src="{{image2}}" alt=""/>
+          <div class="caption">
+            <h4>{{name}}</h4>
+            <p>{{description}}</p>
+          </div>
+        </div>
+      </div> <!-- / col -->
+      {{/each}}
+    </div> <!-- / row -->
+  </script>
+
+  <!-- /Animal list -->
+
+  <!-- Animal photo -->
+
+  <script id="animal-details-template" type="text/x-handlebars-template">
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <img class="image-responsive" src="{{image1}}" alt=""/>
+        <div class="caption">
+          <h4>{{name}}</h4>
+          <p>{{description}}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</script>
+<!-- /Animal photo -->
 
 </body>
 </html>
